<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white">

    <LinearLayout
        android:id="@+id/card_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnArrow"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btn_arrow"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/dark_grey" />

        <TextView
            android:id="@+id/tv_badges"
            style="@style/DarkGreyBoldText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_badges_text" />

        <ImageView
            android:id="@+id/btnVoiceAssistant"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btn_voice_assistant"
            android:src="@drawable/voice_asistant"
            app:tint="@color/blue" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMessages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="@dimen/padding_large"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/inputContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_top" />

    <androidx.cardview.widget.CardView
        android:id="@+id/inputContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:outlineProvider="none"
        app:cardCornerRadius="@dimen/card_corner_radius_medium"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium">

            <ImageView
                android:id="@+id/btnVoice"
                android:layout_width="@dimen/button_height_small"
                android:layout_height="@dimen/button_height_small"
                android:background="@drawable/circle_background"
                android:contentDescription="@string/btn_voice"
                android:padding="@dimen/margin_small"
                android:src="@android:drawable/ic_btn_speak_now"
                app:tint="@color/blue" />

            <EditText
                android:id="@+id/inputMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_medium"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center_vertical|start"
                android:hint="@string/input_message"
                android:imeOptions="actionSend"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLines="4"
                android:minHeight="@dimen/button_height_small"
                android:padding="@dimen/margin_small"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size_large" />

            <ImageView
                android:id="@+id/btnSend"
                android:layout_width="@dimen/button_height_small"
                android:layout_height="@dimen/button_height_small"
                android:background="@drawable/circle_blue_background"
                android:contentDescription="@string/btn_send"
                android:padding="@dimen/margin_small"
                android:src="@android:drawable/ic_menu_send"
                app:tint="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
