<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    android:fillViewport="true"
    android:overScrollMode="ifContentScrolls"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16dp">

        <TextView
            android:id="@+id/tvHello"
            style="@style/DarkGreyBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/tv_hello"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/elevation"
            android:text="@string/tv_username"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintStart_toStartOf="@id/tvHello"
            app:layout_constraintTop_toBottomOf="@id/tvHello" />

        <androidx.cardview.widget.CardView
            android:id="@+id/searchCard"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height_large"
            android:layout_marginTop="@dimen/_32dp"
            android:backgroundTint="@color/light_white"
            app:cardCornerRadius="@dimen/_8dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUserName">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/_16dp">

                <ImageView
                    android:id="@+id/ivSearchIcon"
                    android:layout_width="@dimen/icon_size_medium"
                    android:layout_height="@dimen/icon_size_medium"
                    android:src="@drawable/search"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/gray" />

                <EditText
                    android:id="@+id/etSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/et_search"
                    android:imeOptions="actionSend"
                    android:inputType="textCapSentences"
                    android:textColor="@color/dark_grey"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/text_size_large"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivSearchIcon"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/llSearchSuggestions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginTop="@dimen/_8dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchCard" />

        <TextView
            android:id="@+id/tvFactsTitle"
            style="@style/DarkGreyBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32dp"
            android:text="@string/tv_facts_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchCard" />

        <com.esmanureral.pupilicahackathon.presentation.feature.home.AccessibleViewPager2
            android:id="@+id/vpDentalFacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:elevation="0dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFactsTitle" />

        <LinearLayout
            android:id="@+id/llPageIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vpDentalFacts" />

        <TextView
            android:id="@+id/tvQuickActions"
            style="@style/DarkGreyBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32dp"
            android:text="@string/tv_quick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llPageIndicator" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAI"
            android:layout_width="0dp"
            android:layout_height="@dimen/xx_large_height"
            android:layout_marginTop="@dimen/_24dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:backgroundTint="@color/onb_pink"
            android:outlineProvider="none"
            app:cardCornerRadius="@dimen/_20dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toStartOf="@id/cardChat"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvQuickActions">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_16dp">

                <ImageView
                    android:id="@+id/imgAI"
                    android:layout_width="@dimen/button_height_large"
                    android:layout_height="@dimen/button_height_large"
                    android:src="@drawable/tooth"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progressAI"
                    android:layout_width="@dimen/image_view"
                    android:layout_height="@dimen/image_view"
                    android:indeterminate="true"
                    android:visibility="gone"
                    app:indicatorSize="@dimen/_32dp"
                    app:layout_constraintBottom_toBottomOf="@id/imgAI"
                    app:layout_constraintEnd_toEndOf="@id/imgAI"
                    app:layout_constraintStart_toStartOf="@id/imgAI"
                    app:layout_constraintTop_toTopOf="@id/imgAI"
                    app:trackThickness="@dimen/elevation" />

                <TextView
                    android:id="@+id/tvAITitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12dp"
                    android:text="@string/tv_ai_title"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/item_year_text_size"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgAI" />

                <TextView
                    android:id="@+id/tvRemainingAnalyses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/elevation"
                    android:gravity="center"
                    android:text="@string/remaining_analysis"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAITitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardChat"
            android:layout_width="0dp"
            android:layout_height="@dimen/xx_large_height"
            android:layout_marginHorizontal="@dimen/_8dp"
            android:backgroundTint="@color/light_orange"
            android:outlineProvider="none"
            app:cardCornerRadius="@dimen/_20dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardAI"
            app:layout_constraintTop_toTopOf="@id/cardAI">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_16dp">

                <ImageView
                    android:id="@+id/imgChat"
                    android:layout_width="@dimen/button_height_large"
                    android:layout_height="@dimen/button_height_large"
                    android:contentDescription="@string/image_chatbot"
                    android:src="@drawable/assistant"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvChatTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12dp"
                    android:text="@string/chat_title"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/item_year_text_size"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgChat" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardBrushingReminder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32dp"
            android:backgroundTint="@color/light_blue"
            android:outlineProvider="none"
            app:cardCornerRadius="@dimen/_24dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardAI">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_24dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/reminderHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/reminderIcon"
                        android:layout_width="@dimen/button_height_large"
                        android:layout_height="@dimen/button_height_large"
                        android:contentDescription="@string/reminder_icon"
                        android:src="@drawable/tooth_brush"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvReminderTitle"
                        style="@style/DarkGreyBoldText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16dp"
                        android:text="@string/reminder_titles"
                        android:textSize="@dimen/text_size_large"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/reminderIcon"
                        app:layout_constraintTop_toTopOf="@id/reminderIcon" />

                    <TextView
                        android:id="@+id/tvReminderDesc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8dp"
                        android:lineSpacingExtra="@dimen/elevation"
                        android:text="@string/reminder_desc"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/item_year_text_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/reminderIcon" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSetReminder"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height_large"
                    android:layout_marginTop="@dimen/_24dp"
                    android:backgroundTint="@color/light_green"
                    android:text="@string/set_reminder"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_28dp"
                    app:iconGravity="textStart"
                    app:iconPadding="@dimen/_8dp"
                    app:iconTint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/reminderHeader" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvPremiumRibbon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8dp"
            android:background="@drawable/premium_ribbon"
            android:paddingHorizontal="@dimen/_8dp"
            android:paddingVertical="@dimen/elevation"
            android:text="@string/premium"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/cardAI"
            app:layout_constraintEnd_toEndOf="@+id/cardAI"
            app:layout_constraintStart_toStartOf="@+id/cardAI" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>